--- a/.github/workflows/flow.yml
+++ b/.github/workflows/flow.yml
@@ -51,7 +51,7 @@ jobs:
         run: |
           git config --local user.name actions-user
           git config --local user.email "actions@github.com"
-          git add data/tns/*
+          git add data/*
           git commit -am "GH ACTION Headlines $(date)"
           git pull origin main
           git push origin main
