--- a/.github/workflows/flow_docker_services2.yml
+++ b/.github/workflows/flow_docker_services2.yml
@@ -33,7 +33,7 @@ jobs:
 # Install R  
       - name: Run R script
         run: |
-          docker run --rm -v ${{ github.workspace }}:/workspace -w /workspace tenfnan/scrap_image:v1 Rscript scrap.R
+          docker run --rm -v ${{ github.workspace }}:/workspace -w /workspace tenfnan/scrap:latest Rscript scrap.R
 # Commit & push
       - name: Commit files
         run: |
