--- a/.github/workflows/flow_docker_services.yml
+++ b/.github/workflows/flow_docker_services.yml
@@ -27,13 +27,20 @@ jobs:
           - '4444:4444'
         volumes:
           - /github/workspace/data/downloads:/home/seluser/Downloads
-      tenfnan:
-        image: tenfnan/scrap:latest
     steps:
-# Install R  
+# Install R
+      - name: Checkout repository
+        uses: actions/checkout@v2
+ 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2  
+        
       - name: Run R script
         run: |
-          Rscript scrap.R
+        # -p (internal port):(external port) - tells docker which TCP ports to expose via the host’s network
+        # -v /external/host/path:/internal/path - mounts a directory from the host to be available inside the image
+        
+          docker run --rm -v ${{ github.workspace }}:/workspace -w /workspace tenfnan/rscrap2:v1 Rscript scrap.R
 # Commit & push
       - name: Commit files
         run: |
@@ -42,7 +49,3 @@ jobs:
           git add data/*
           git commit -am "GH ACTION Headlines $(date)"
           git pull origin main
-          git push origin main
-        env:
-          REPO_KEY: ${{secrets.GITHUB_TOKEN}}
-          username: github-actions
