--- a/.github/workflows/flow_docker.yml
+++ b/.github/workflows/flow_docker.yml
@@ -29,7 +29,7 @@ jobs:
         
       - name: Run R script
         run: | 
-          docker run -d --name r-selenium-container -p 4444:4444 tenfnan/rscrap2:v1
+          docker run -d --name r-selenium-container -p 4444:4444 -m 4g tenfnan/rscrap2:v1
           docker cp scrap.R r-selenium-container:/home/seluser/scrap.R
           docker exec r-selenium-container Rscript /home/seluser/scrap.R
             #docker run --rm -v ${{ github.workspace }}:/workspace -w /workspace tenfnan/rscrap2:v1 Rscript scrap.R
