--- a/.github/workflows/flow_docker.yml
+++ b/.github/workflows/flow_docker.yml
@@ -30,8 +30,8 @@ jobs:
       - name: Run R script
         run: | 
           docker run -d --name r-selenium-container -p 4444:4444 -m 4g tenfnan/rscrap2:v1
-          docker cp scrap.R r-selenium-container:/home/seluser/scrap.R
-          docker exec r-selenium-container Rscript /home/seluser/scrap.R
+          docker cp scrap_.R r-selenium-container:/home/seluser/scrap_.R
+          docker exec r-selenium-container Rscript /home/seluser/scrap_.R
             #docker run --rm -v ${{ github.workspace }}:/workspace -w /workspace tenfnan/rscrap2:v1 Rscript scrap.R
 # Commit & push
       - name: Commit files
