--- a/.github/workflows/flow_docker.yml
+++ b/.github/workflows/flow_docker.yml
@@ -42,6 +42,7 @@ jobs:
           #docker run -d --name r-selenium-container -p 4444:4444 -m 4g tenfnan/rscrap2:v1
           docker run -d --name r-selenium-container -m 4g tenfnan/rscrap2:v1
           docker cp scrap_.R r-selenium-container:/home/seluser/scrap_.R
+          docker cp functions.R r-selenium-container:/home/seluser/functions.R
           docker exec r-selenium-container Rscript /home/seluser/scrap_.R
             #docker run --rm -v ${{ github.workspace }}:/workspace -w /workspace tenfnan/rscrap2:v1 Rscript scrap.R
 # Commit & push
